--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
             min-height: 100vh;
         }
 
+        body.light-theme {
+            --bg: #f3f4f6;
+            --bg-soft: #ffffff;
+            --bg-softer: #f9fafb;
+            --border: #d1d5db;
+            --border-soft: #e5e7eb;
+            --text: #111827;
+            --muted: #6b7280;
+            --danger: #b91c1c;
+            --danger-soft: rgba(248, 113, 113, 0.15);
+            --shadow: 0 10px 30px rgba(15, 23, 42, 0.12);
+            background: radial-gradient(circle at top, #e0f2fe 0, #f9fafb 55%);
+        }
+
         .app {
             max-width: 960px;
             margin: 0 auto;
@@ -55,8 +69,15 @@
         }
 
         header {
-            text-align: center;
             margin-bottom: 1.5rem;
+        }
+
+        .header-top {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 0.75rem;
+            flex-wrap: wrap;
         }
 
         header h1 {
@@ -72,7 +93,7 @@
         }
 
         .card {
-            background: radial-gradient(circle at top left, #111827 0, #020617 55%);
+            background: radial-gradient(circle at top left, var(--bg-soft) 0, var(--bg) 55%);
             border-radius: var(--radius-card);
             padding: 1rem 1.1rem 1.1rem;
             margin-bottom: 1rem;
@@ -130,6 +151,11 @@
             transform: translateY(-1px);
         }
 
+        body.light-theme input[type="text"]:focus,
+        body.light-theme input[type="number"]:focus {
+            background-color: #ffffff;
+        }
+
         input[type="number"] {
             -moz-appearance: textfield;
         }
@@ -166,7 +192,7 @@
             padding: 0.35rem 0.4rem;
             border-radius: 0.75rem;
             border: 1px dashed rgba(148, 163, 184, 0.28);
-            background: radial-gradient(circle at top left, #020617 0, #020617 100%);
+            background: radial-gradient(circle at top left, var(--bg-softer) 0, var(--bg) 100%);
         }
 
         .person-row input[type="text"] {
@@ -205,20 +231,20 @@
         }
 
         .btn-secondary {
-            background-color: rgba(15, 23, 42, 0.95);
+            background-color: var(--bg-soft);
             color: var(--text);
             border: 1px solid rgba(148, 163, 184, 0.4);
         }
 
         .btn-secondary:hover {
-            background-color: rgba(15, 23, 42, 1);
+            background-color: var(--bg);
             border-color: var(--accent);
         }
 
         .mini-btn {
             font-size: 0.7rem;
             padding: 0.2rem 0.55rem;
-            background-color: rgba(15, 23, 42, 0.9);
+            background-color: var(--bg-soft);
             color: var(--muted);
             border: 1px solid rgba(148, 163, 184, 0.4);
         }
@@ -235,7 +261,7 @@
             border-radius: 999px;
             padding: 0;
             font-size: 1.1rem;
-            background-color: rgba(15, 23, 42, 0.95);
+            background-color: var(--bg-soft);
             color: var(--muted);
             border: 1px solid rgba(148, 163, 184, 0.35);
             flex-shrink: 0;
@@ -287,7 +313,7 @@
             padding: 0.55rem 0.6rem;
             border-radius: 0.9rem;
             border: 1px dashed rgba(148, 163, 184, 0.28);
-            background: radial-gradient(circle at top left, #020617 0, #020617 100%);
+            background: radial-gradient(circle at top left, var(--bg-softer) 0, var(--bg) 100%);
         }
 
         .item-name input[type="text"] {
@@ -296,8 +322,8 @@
 
         .item-price {
             display: flex;
-            align-items: center;
-            gap: 0.35rem;
+            align-items: flex-end;
+            gap: 0.45rem;
         }
 
         .item-price span {
@@ -365,7 +391,7 @@
             padding: 0.25rem 0.6rem;
             border-radius: var(--radius-pill);
             border: 1px solid rgba(148, 163, 184, 0.55);
-            background-color: rgba(15, 23, 42, 0.9);
+            background-color: var(--bg-soft);
             color: var(--muted);
             transition: background-color var(--transition),
             color var(--transition), border-color var(--transition),
@@ -395,7 +421,7 @@
             font-size: 0.72rem;
             padding: 0.15rem 0.5rem;
             border-radius: var(--radius-pill);
-            background-color: rgba(15, 23, 42, 0.95);
+            background-color: var(--bg-soft);
             border: 1px solid rgba(148, 163, 184, 0.4);
             color: var(--muted);
         }
@@ -521,7 +547,7 @@
             font-size: 0.7rem;
             padding: 0.15rem 0.45rem;
             border-radius: var(--radius-pill);
-            background-color: rgba(15, 23, 42, 0.95);
+            background-color: var(--bg-soft);
             border: 1px solid rgba(148, 163, 184, 0.4);
             margin-top: 0.25rem;
         }
@@ -530,8 +556,15 @@
 <body>
 <div class="app">
     <header>
-        <h1>Divisor de Conta de Restaurante</h1>
-        <p>Informe quem comeu o quê e veja quanto cada um deve pagar, com taxa proporcional.</p>
+        <div class="header-top">
+            <div>
+                <h1>Divisor de Conta de Restaurante</h1>
+                <p>Informe quem comeu o quê e veja quanto cada um deve pagar, com taxa proporcional.</p>
+            </div>
+            <button id="themeToggleBtn" type="button" class="mini-btn">
+                Alternar tema
+            </button>
+        </div>
     </header>
 
     <section class="card">
@@ -585,12 +618,12 @@
     <section class="card">
         <div class="section-header">
             <h2>3. Itens da conta</h2>
-            <small>Informe o valor total de cada item e marque quem consumiu.</small>
+            <small>Informe a quantidade, valor unitário de cada item e marque quem consumiu.</small>
         </div>
 
         <div class="items-header">
             <span>Item</span>
-            <span>Valor total</span>
+            <span>Qtd / Valor</span>
             <span>Quem consumiu</span>
             <span></span>
         </div>
@@ -602,7 +635,7 @@
                 + Adicionar item
             </button>
             <span class="hint">
-          Use o <strong>valor total</strong> da linha na conta do restaurante. A divisão é feita automaticamente entre os selecionados.
+          Use a <strong>quantidade</strong> e o <strong>valor unitário</strong>. O valor total (qtd × valor) é dividido automaticamente entre os selecionados.
         </span>
         </div>
     </section>
@@ -657,6 +690,8 @@
         const calculateBtn = document.getElementById("calculateBtn");
         const clearAllBtn = document.getElementById("clearAllBtn");
         const loadExampleBtn = document.getElementById("loadExampleBtn");
+        const themeToggleBtn = document.getElementById("themeToggleBtn");
+        const themeMeta = document.querySelector('meta[name="theme-color"]');
 
         function escapeHtml(str) {
             return String(str).replace(/[&<>"']/g, function (m) {
@@ -738,6 +773,10 @@
                     initialData && typeof initialData.price === "number"
                         ? initialData.price
                         : 0,
+                quantity:
+                    initialData && typeof initialData.quantity === "number" && initialData.quantity > 0
+                        ? initialData.quantity
+                        : 1,
                 participants:
                     initialData && initialData.participants
                         ? [...initialData.participants]
@@ -772,6 +811,13 @@
                         ? item.price
                         : "";
 
+                const qtyValue =
+                    typeof item.quantity === "number" &&
+                    !isNaN(item.quantity) &&
+                    item.quantity > 0
+                        ? item.quantity
+                        : 1;
+
                 row.innerHTML = `
             <div class="item-name">
               <label style="margin-bottom:0.15rem;">Item</label>
@@ -783,8 +829,19 @@
               />
             </div>
             <div class="item-price">
+              <div style="width:80px;">
+                <label style="margin-bottom:0.15rem;">Qtd</label>
+                <input
+                  type="number"
+                  class="item-qty-input"
+                  min="1"
+                  step="1"
+                  inputmode="numeric"
+                  value="${qtyValue}"
+                />
+              </div>
               <div style="width:100%;">
-                <label style="margin-bottom:0.15rem;">Valor total</label>
+                <label style="margin-bottom:0.15rem;">Valor unitário</label>
                 <div style="display:flex;align-items:center;gap:.35rem;">
                   <span>R$</span>
                   <input
@@ -813,6 +870,7 @@
 
                 const nameInput = row.querySelector(".item-name-input");
                 const priceInput = row.querySelector(".item-price-input");
+                const qtyInput = row.querySelector(".item-qty-input");
                 const participantsContainer = row.querySelector(".item-participants");
                 const selectAllBtn = row.querySelector(".select-all");
                 const clearAllBtn = row.querySelector(".clear-all");
@@ -826,6 +884,14 @@
                     const raw = String(e.target.value || "").replace(",", ".");
                     const v = parseFloat(raw);
                     item.price = isNaN(v) ? 0 : v;
+                });
+
+                qtyInput.addEventListener("input", (e) => {
+                    const raw = String(e.target.value || "").replace(",", ".");
+                    let q = parseInt(raw, 10);
+                    if (!isFinite(q) || q < 1) q = 1;
+                    item.quantity = q;
+                    qtyInput.value = q;
                 });
 
                 participantsContainer.innerHTML = "";
@@ -892,15 +958,22 @@
             let rate = parseFloat(rawRate);
             if (!isFinite(rate) || rate < 0) rate = 0;
 
-            const activeItems = state.items.filter(
-                (item) =>
-                    typeof item.price === "number" &&
-                    item.price > 0 &&
+            const activeItems = state.items.filter((item) => {
+                const qty = item.quantity && item.quantity > 0 ? item.quantity : 1;
+                const price = typeof item.price === "number" ? item.price : 0;
+                const lineTotal = price * qty;
+                return (
+                    lineTotal > 0 &&
                     item.participants &&
                     item.participants.length > 0
-            );
+                );
+            });
 
-            const subtotal = activeItems.reduce((sum, item) => sum + item.price, 0);
+            const subtotal = activeItems.reduce((sum, item) => {
+                const qty = item.quantity && item.quantity > 0 ? item.quantity : 1;
+                const price = typeof item.price === "number" ? item.price : 0;
+                return sum + price * qty;
+            }, 0);
 
             if (subtotal <= 0) {
                 totalsContainer.innerHTML =
@@ -917,7 +990,10 @@
             });
 
             activeItems.forEach((item) => {
-                const share = item.price / item.participants.length;
+                const qty = item.quantity && item.quantity > 0 ? item.quantity : 1;
+                const price = typeof item.price === "number" ? item.price : 0;
+                const lineTotal = price * qty;
+                const share = lineTotal / item.participants.length;
                 item.participants.forEach((pid) => {
                     if (perPerson[pid]) {
                         perPerson[pid].consumption += share;
@@ -1028,30 +1104,59 @@
             addItem({
                 name: "Linguiça",
                 price: 6.5,
+                quantity: 1,
                 participants: [rui],
             });
 
             addItem({
                 name: "Cajuína 2L",
                 price: 17.9,
+                quantity: 1,
                 participants: [daniel, darlyson, lucas, rui],
             });
 
             addItem({
                 name: "Churrasco Vieira",
                 price: 169.9,
+                quantity: 1,
                 participants: [daniel, darlyson, manoel, lucas, rui],
             });
 
             addItem({
                 name: "Linguiça Cuiabana Suína",
                 price: 13.0,
+                quantity: 1,
                 participants: [lucas],
             });
 
             serviceRateInput.value = "10";
             billNameInput.value = "Exemplo - Churrasco com Cajuína";
             calculateTotals();
+        }
+
+        // --------- Tema claro/escuro ---------
+        function applyTheme(theme) {
+            if (theme === "light") {
+                document.body.classList.add("light-theme");
+                if (themeMeta) themeMeta.setAttribute("content", "#f9fafb");
+                if (themeToggleBtn) themeToggleBtn.textContent = "🌙 Modo escuro";
+            } else {
+                document.body.classList.remove("light-theme");
+                if (themeMeta) themeMeta.setAttribute("content", "#020617");
+                if (themeToggleBtn) themeToggleBtn.textContent = "🌞 Modo claro";
+            }
+        }
+
+        const savedTheme = localStorage.getItem("divisor-conta-theme") || "dark";
+        applyTheme(savedTheme);
+
+        if (themeToggleBtn) {
+            themeToggleBtn.addEventListener("click", () => {
+                const isLight = document.body.classList.contains("light-theme");
+                const next = isLight ? "dark" : "light";
+                applyTheme(next);
+                localStorage.setItem("divisor-conta-theme", next);
+            });
         }
 
         // Focar no nome ao adicionar pessoa
