--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     rgba(34, 197, 94, 0.16),
                     rgba(16, 185, 129, 0.4)
             );
-            color: #bbf7d0;
+            color: var(--text);
             border-color: rgba(45, 212, 191, 0.9);
             box-shadow: 0 0 0 1px rgba(34, 197, 94, 0.5);
             transform: translateY(-1px);
@@ -429,7 +429,7 @@
         .tag-accent {
             background-color: var(--accent-soft);
             border-color: rgba(45, 212, 191, 0.9);
-            color: #bbf7d0;
+            color: var(--accent-strong);
         }
 
         .hint {
@@ -445,7 +445,7 @@
             border-radius: 0.75rem;
             background-color: rgba(248, 113, 113, 0.07);
             border: 1px solid rgba(248, 113, 113, 0.45);
-            color: #fecaca;
+            color: var(--danger);
         }
 
         .results-table {
